# aws-copy-pt

./: .gitignore  README.rst  pyproject.toml  venv_create.sh
src/acp/: cli.py  db.py  globus.py  logging.py
